dark mode fixes: fix logo transparent background, fix table

--- a/_static/myfile.css
+++ b/_static/myfile.css
@@ -3,3 +3,7 @@
         visibility: hidden;
     }
 }
+
+.transparent-background {
+    background-color: transparent !important;
+}
